roles/s2i/cakephp_backup_restore/files/cakephp-template.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: cakephp-example
  labels:
    app: cakephp-example
---
kind: Service
apiVersion: v1
metadata:
  name: cakephp-example
  namespace: cakephp-example
  labels:
    app: cakephp-example
  annotations:
    description: Exposes and load balances the application pods
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    name: cakephp-example
---
kind: Route
apiVersion: v1
metadata:
  name: cakephp-example
  namespace: cakephp-example
  labels:
    app: cakephp-example
spec:
  to:
    kind: Service
    name: cakephp-example
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: cakephp-example
  namespace: cakephp-example
  labels:
    app: cakephp-example
  annotations:
    description: Defines how to deploy the application server
    template.alpha.openshift.io/wait-for-ready: 'true'
spec:
  strategy:
    type: Rolling
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - cakephp-example
      from:
        kind: ImageStreamTag
        name: cakephp-example:latest
  - type: ConfigChange
  replicas: 1
  selector:
    name: cakephp-example
  template:
    metadata:
      name: cakephp-example
      labels:
        name: cakephp-example
        app: cakephp-example
    spec:
      containers:
      - name: cakephp-example
        image: " "
        ports:
        - containerPort: 8080
        readinessProbe:
          timeoutSeconds: 3
          initialDelaySeconds: 3
          periodSeconds: 60
          httpGet:
            path: "/"
            port: 8080
        livenessProbe:
          timeoutSeconds: 3
          initialDelaySeconds: 30
          periodSeconds: 60
          httpGet:
            path: "/"
            port: 8080
        resources:
          limits:
            memory: 521Mi
